# charts

./: .gitignore  pyproject.toml
league_gender_distribution/: data.csv
rail_electrified_network/: requirements.txt  trainsize.ipynb
src/charts/common/: redis.py
src/charts/cpu_temp_vs_outdoor_temp/: query_beszel.py  temps.ipynb
src/charts/league_gender_distribution/: malefemale.ipynb
src/charts/rail_electrified_network/: data.csv
src/charts/scorer_wikipedia/: main.ipynb  players.json
