[project]
name = "charts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "redis",
    "requests",
    "ipykernel",
    "matplotlib>=3.11.0",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"